fixed line spacing and colours lol

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,13 +23,14 @@ h1, h2 {
   font-weight: 400;
 }
 h1 {
-  font-size: 80px;
+  font-size: 5rem;
 }
 h2 {
-  font-size: 40px;
+  font-size: 2rem;
   margin-top: 0;
 }
 h3 {
+  font-size: 1.25rem;
   margin: 0;
 }
 a {
@@ -47,6 +48,7 @@ a:hover {
   max-width: 950px;
   margin: 0 auto;
   padding: 60px 50px;
+  line-height: 1.5;
   overflow: hidden;
 }
 .uppercase {
@@ -139,7 +141,7 @@ h3 ~ p {
 /* Education
 -------------------------*/
 .education {
-  background: linear-gradient(rgba(141, 153, 174, 0.8), rgba(141, 153, 174, 0.5))
+  background: linear-gradient(rgba(141, 153, 174, 0.8), rgba(141, 153, 174, 0.5));
   background-size: contain;
 }
 p + h3 {
@@ -155,7 +157,9 @@ h3 ~ p {
   margin: 0;
 }
 .project-description {
+  margin-top: 5px;
   margin-bottom: 25px;
+  line-height: 1.5;
 }
 .project-description a {
   color:#f5e642
@@ -168,7 +172,7 @@ h3 ~ p {
 -------------------------*/
 
 .interests {
-  background: linear-gradient(rgba(141, 153, 174, 0.8), rgba(138, 119, 76, 0.5))
+  background: linear-gradient(rgba(141, 153, 174, 0.8), rgba(138, 119, 76, 0.5));
 }
 
 .interests-description li {
@@ -181,11 +185,13 @@ h3 ~ p {
   .col-narrow {
     width: 30%;
     float: left;
+    line-height: 1.5;
   }
   .col-wide {
     width: 70%;
     float: left;
     padding-left: 20px;
+    line-height: 1.5;
   }
 }
 @media (max-width: 899px){
